--- a/project.config.json
+++ b/project.config.json
@@ -15,7 +15,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.6.6",
-	"appid": "wx5c38a296f799761d",
+	"appid": "wx535a1eea4e923394",
 	"projectname": "MaFengWo-tourGuide",
 	"debugOptions": {
 		"hidedInDevtools": []
